[metadata]
name = remappy
version = 0.0.0.10
author = Ulrich G. Wortmann
license = GPL-3.0-or-later
author_email = uli.wortmann@utoronto.ca
description = Reaction-Transport Modeling in Porous Media
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uliw/remappy
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
	Operating System :: OS Independent
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering :: Chemistry
	License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)

[options]
packages = find:
python > = 3.9
scripts = remappy/remap.py
include_package_data=True

[options.package_data]
* = remappy/*.m

[bdist_wheel]
universal = 1



